syntax="proto2";
package sisyphus.RaftLogMetadata;


// Reserved RaftLogMeta Keys:
// META_CURRENT_TERM
// META_VOTE_FOR
// META_COMMIT_INDEX
// META_APPLY_INDEX

message Metadata {
    required uint64 current_term    = 1;
    required uint64 voted_for       = 2;
    required uint64 commit_index    = 3;
    required uint64 apply_index     = 4;
}
